# context-pack

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.ko.md  README.md  SECURITY.md  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.codex/context/: CONTRACTS.md  INDEX.md  REVIEW.md  manifest.json
.codex/handoff/: CURRENT.md  DECISIONS.md  LOG.md
.context-pack/: CONTRACTS.md  CURRENT.md  DECISIONS.md  INDEX.md  LOG.md  REVIEW.md  manifest.json
.context-pack/AREAS/: docs-adoption.md  engine.md  installer-release.md  overview.md  skill-plugin.md  tests.md
.cursor/rules/: context-pack.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  field_report.yml
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARKS.ko.md  BENCHMARKS.md  PUBLIC_BETA.ko.md  PUBLIC_BETA.md  RELEASE.ko.md  RELEASE.md  SKILL_AUDIT.md
docs/benchmarks/: codex-ab-v050-continuation.json  codex-ab-v050-continuation.md  codex-ab-v050-review.json  codex-ab-v050-review.md  codex-ab-v050-summary.md  codex-ab-v050-touch.json  codex-ab-v050-touch.md  codex-ab-v050-zoning.json  codex-ab-v050-zoning.md  codex-ab-zoning-confirm.json  codex-ab-zoning-confirm.md  codex-ab-zoning-evidence.json  codex-ab-zoning-evidence.md  latest.json  (+1 more)
scripts/: benchmark_codex_ab.py  benchmark_context_pack.py  generate_demo_gif.py  install_plugin.py  install_skill.py  sync_packaged_assets.py  validate_packaged_cli.py  validate_remaining.py
tests/: test_benchmarks.py  test_context_pack.py
(+27 files in other folders)
